<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--   BACKGROUNDS   -->
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_statistic"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_statistic"
        />

    <TextView
        android:id="@+id/titlePreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/colorClear"
        android:text="@string/menu_preferences"
        />

    <TextView
        android:id="@+id/textChooseNumberOfTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlePreferences"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/numberOfTask"
        />


    <RadioGroup
        android:id="@+id/radioTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textChooseNumberOfTask"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radio5Tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_5tasks"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorNumberBrown"
            android:onClick="checkedNumTask"
            tools:ignore="OnClick" />
        <RadioButton
            android:id="@+id/radio10Tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_10tasks"
            android:textSize="20sp"
            android:textColor="@color/colorNumberBrown"
            android:onClick="checkedNumTask"
            tools:ignore="OnClick" />
        <RadioButton
            android:id="@+id/radio25Tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/radio_25tasks"
            android:textSize="20sp"
            android:textColor="@color/colorNumberBrown"
            android:onClick="checkedNumTask"
            tools:ignore="OnClick" />
    </RadioGroup>

    <TextView
        android:id="@+id/textChooseLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioTasks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/changeLanguage"
        />




    <ImageView
        android:layout_width="160dp"
        android:layout_height="230dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bear"
        />



</RelativeLayout>

