<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        />


    <Button
        android:id="@+id/btn_play"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_play"
        android:textSize="20sp"
        android:icon="@drawable/ic_menu_play"
        android:gravity="center"
        android:background="@drawable/shape"
        android:drawableRight="@drawable/btn_icon_play"
        android:onClick="onButtonClickStart"
        />

    <Button
        android:id="@+id/btn_statistics"
        android:layout_below="@id/btn_play"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/menu_statistic"
        android:textSize="15sp"
        android:background="@drawable/shape"
        android:drawableRight="@drawable/btn_icon_statistic"
        />

    <Button
        android:id="@+id/btn_settings"
        android:layout_below="@id/btn_statistics"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/menu_preferences"
        android:textSize="15sp"
        android:background="@drawable/shape"
        android:elevation="10dp"
        android:drawableRight="@drawable/btn_icon_preferences"
        />


</RelativeLayout>